Fixed a alignment issue in forum UI

--- a/src/components/forum/forum.css
+++ b/src/components/forum/forum.css
@@ -249,7 +249,7 @@ input[type="button"]:hover {
 }
 
 .repComment>.commentText {
-    padding-left: 40px;
+    padding-left: 30px;
     text-align: justify;
 }
 
